- Added support for __isset() to product, collection, gallery, payment and shipping classes (Contao Core Ticket #2897)
- Added root page option to product list module (Ticket #366)
- Improved ajax overlay position and transparency
- Fixed potential SQL injection in product collection
- Fixed CSS classes in checkout review and order details
- Fixed emails not sent to customers (Ticket #406)

Version 0.2.6 (2011-03-01)
------------------------------
- Added label for toggle button in product tree
- Added missing 'enabled' label to tl_iso_shipping_options (Ticket #373)
- Added support for language switching on product reader page (changelanguage extension)
- Added: automatically disable page cache for sites with customer-related modules such as Cart (Ticket #392)
- Improved: Check isDefaultBilling/isDefaultShipping on first checkout
- Improved: Label for payment method is no longer mandatory (will use name if not set)
- Improved: Made text fields for meta description & meta keywords smaller (Ticket #386)
- Improved: Added javascript confirmation before deleting address (Ticket #328)
- Improved: Use generic labels for redirecting to payment provider on checkout
- Improved order PDF printing, fixed several bugs (Ticket #376, Ticket #356)
- Fixed ##newsletter.css## in HTML email
- Fixed issue with simple tokens in mail template subject
- Fixed issue with HTML in plain text emails
- Fixed CSS classes for new address fields in checkout module
- Fixed publish toggle not working for non-admins
- Fixed hardcoded labels in order history/details (Ticket #382)
- Fixed unlimited downloads only downloadable once (Ticket #383)
- Fixed filters overwriting each other (Ticket #363)
- Fixed issues with email messages (Ticket #391)
- Fixed tax surcharge calculation for prices including taxes
- Fixed bug in explode() for the filterFields template variable
- Fixed: Address was not added to address book correctly
- Fixed: Downloads in PDF invoice caused fatal error