@@ -12,6 +12,8 @@ Version 0.2.7 (2011-03-??)
 - Fixed potential SQL injection in product collection
 - Fixed CSS classes in checkout review and order details
 - Fixed emails not sent to customers (Ticket #406)
+- Fixed tax calculation for prices including taxes and discount
+- Fixed float precision on discount rules
 
 Version 0.2.6 (2011-03-01)
 ------------------------------
